# PCS

./: prova.txt
esercitazione1/: CMakeLists.txt  es1.cpp  mediatemperature.cpp  temperature.txt
esercitazione2/: Bubblesort.cpp  CMakeLists.txt  es1.cpp  es1_1.cpp  es2.cpp
esercitazione3/: CMakeLists.txt  Dichiarazione_AI.txt  es3.hpp  test.cpp
esercitazione4/: CMakeLists.txt  Dichiarazione_AI.txt  measure_sorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  Dichiarazione_AI.txt  Osservazioni.txt  measure_sorts.cpp  sorts.hpp  test_mergesort.cpp  test_quicksort.cpp
esercitazione8/: CMakeLists.txt  grafo.hpp  test.cpp
